# xhs-saas-content

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SKILL.md  debug_fav.py  pyproject.toml
.github/workflows/: release.yml
cover/: README.md  install.sh  package-lock.json  package.json
cover/docs/: styles_and_fonts.md
cover/schemas/: style-profile.schema.json
cover/scripts/: generate.mjs
cover/styles/: ai-avatar-sticker.json  background-big-text.json  cozy-home.json  dark-glow.json  dashed-decoration.json  flat-blue-mascot.json  flat-candy-playful.json  flat-handdraw-warm.json  flat-ink-gold.json  flat-mono-minimal.json  flat-warm-life.json  geek-workflow-dialog.json  hand-drawn-border.json  home-motivation.json  hurricane-adventure.json  multi-layer-layout.json  neon-contrast.json  outdoor-handwriting.json  pink-yellow-playful.json  professional-clean.json  professional-woman.json  split-screen-tags.json  sticker-energy.json  study-room-intellectual.json  tech-finance-analytical.json  thinking-question.json  workplace-big-text.json  yellow-pink-banner.json
demo/: content.json  小红书模拟器.html  小红书模拟器_分享版.html
demo-longpost/: cards.html  content.json  小红书模拟器.html  小红书模拟器_分享版.html
docs/: unified-workflow.md
examples/: content.sample.json  小红书模拟器_分享版.html
scripts/: build_simulator.py  diversity.py  fetch_favorites.py  gen_image.py  profile.py  serve.py  shot.py  watermark.py
scripts/xhs/: publish.py
styles/: angle-matrix.md  article-styles.json  content-compliance.md  cover-bridge.json  image-styles.md  product-discovery.md  writing-deai.md
(+12 files in other folders)
