[project]
name = "xhs-saas-content"
version = "0.2.0"
description = "小红书 SaaS 内容生成器：JTBD 卖点提炼 + 爆款封面 + 去 AI 味配图 + 第一人称长文 + 内容合规检测 + 可编辑发布模拟器"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# HTML 渲染兜底出图（中文零错字）
render = ["playwright>=1.40", "pillow>=10.0"]
# 生图模型按需装其一
gemini = ["google-genai>=0.3"]
openai = ["openai>=1.0"]
ark = ["volcengine-python-sdk[ark]>=1.0"]
dashscope = ["dashscope>=1.14"]
dev = ["ruff>=0.9.0"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E402",   # module-level imports not at top (needed for sys.path manipulation)
    "RUF001", # ambiguous unicode characters (Chinese punctuation is intentional)
    "RUF002", # ambiguous unicode in docstrings (Chinese punctuation is intentional)
    "RUF003", # ambiguous unicode in comments (Chinese punctuation is intentional)
]
